vlib/v/checker/tests/sum_type_exists.out
vlib/v/checker/tests/sum_type_exists.vv:1:22: error: unknown type `Inexistant`
    1 | type Miscellaneous = Inexistant | Nope | int
      |                      ~~~~~~~~~~